Add unit tests for List and get in API.
 - refactor controllers
 - remove abspath and other irrelvant data in response
 - move fixtures
 - refactor decorators

JIRA: QTIP-226

(cherry picked from commit bef693f40ad87170b7233b9fef62f2fd8abfc8d8)
